--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>A-Frame Firebase Component - Basic</title>
+    <title>probando</title>
     <script src="../build.js"></script>
     <script src="components/follow.js"></script>
     <script src="components/random-position.js"></script>
