--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -6,10 +6,12 @@
     <script src="components/random-position.js"></script>
   </head>
   <body>
-    <a-scene firebase="apiKey: AIzaSyCZ3-NR0dDNaVzDgpybULwmJokkPTSmOsQ;
-                       authDomain: aframe-firebase-component.firebaseapp.com;
-                       databaseURL: https://aframe-firebase-component.firebaseio.com;
-                       storageBucket: aframe-firebase-component.appspot.com">
+    <a-scene firebase="apiKey: AIzaSyC3cvrmG_hOE6lvYD7iSX8GN8Pp4Vc1S10;
+                     authDomain: fercastillo-127fd.firebaseapp.com;
+                     databaseURL: https://fercastillo-127fd.firebaseio.com;
+                     storageBucket: fercastillo-127fd.appspot.com">
+      
+      
       <a-assets>
         <a-mixin id="avatar-head"
                 geometry="primitive: box; depth: 0.3; height: 0.3; width: 0.3"
